Address code smells and outdated language use in utiLITI.